<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/logo_bg"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center" >


                <ImageView
                    android:layout_marginTop="40dp"
                    android:id="@+id/img_login_header"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@mipmap/logog" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_login_welcome"
                android:textSize="18sp"
                android:textColor="#fff"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edt_login_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="30dp"
                    android:background="@android:color/white"
                    android:hint="@string/str_login_name"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:src="@drawable/login_user"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/iv_cancel_username"
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:visibility="gone"
                        android:src="@drawable/login_cancel"/>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edt_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="30dp"
                    android:background="@android:color/white"
                    android:hint="@string/str_login_password"
                    android:inputType="textPassword"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:src="@drawable/login_password"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/select_btn_login"
                    android:text="@string/str_login"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:layout_alignParentBottom="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:text="@string/str_com_name"/>

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>